# StockPrice

./: .gitignore  1.py  README.md  gui  requirement.txt  setup.cfg
.github/workflows/: python-package-conda.yml
StockPrice/: 1.ipynb  1.py  __init__.py  invest_stragy.ipynb
StockPrice/.ipynb_checkpoints/: 1-checkpoint.ipynb
StockPrice/Evaluation/: evaluation.py
StockPrice/ML/: __init__.py  ml.py
StockPrice/src/: StockPrice_ML.py  StockPrice_visualize.py  StockPrice_visualize2.py  pylintrc  stock_price_ml.py  stock_price_visualize.py
StockPrice/tests/: test_ML.py  test_StockPrice_visualize.py  test_visualization.py  test_visualize.py
data/: AAPL.csv  AMZN.csv  MSFT.csv  TSLA.csv
docs/: Functional_Specification.md  Technology Review.key  Technology Review.pptx  design.md
docs/TechnologyReview/: Technology Review.pptx
example/: 1.py  2.ipynb  cache.sqlite  evaluation.ipynb  example.ipynb  invest_stragy.ipynb
stockprice/: StockPrice_visualize2.py  __init__.py
stockprice/Evaluation/: evaluation.py
stockprice/ML/: ml.py
stockprice/Visualization/: visualization.py
stockprice/evaluation/: evaluation.py
stockprice/ml/: ml.py
stockprice/tests/: test_ML.py  test_evaluation.py  test_visualization.py
stockprice/visualization/: visualization.py
