[metadata]
name = stockprice
version = 0.0.1
author = Shuntao Chen, Yiling Kang
author_email = shuntao1994@gmail.com
description = A tool for stock price visulization and forecasting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ko2259/StockPrice
project_urls =
    Bug Tracker = https://github.com/Ko2259/StockPrice/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6